<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/start">

    <fragment
        android:id="@+id/start"
        android:name="com.example.myspacex.presentation.fragment.StartingFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_starting" />

    <fragment
        android:id="@+id/no_results"
        android:name="com.example.myspacex.presentation.fragment.NoResultsFragment"
        android:label="@string/no_results"
        tools:layout="@layout/fragment_no_results" />

    <fragment
        android:id="@+id/search_results"
        android:name="com.example.myspacex.presentation.fragment.SearchResultsFragment"
        android:label="@string/search_results"
        tools:layout="@layout/fragment_search_results" />

    <fragment
        android:id="@+id/no_connection"
        android:name="com.example.myspacex.presentation.fragment.NoConnectionFragment"
        android:label="@string/no_connection"
        tools:layout="@layout/fragment_no_connection" />

    <fragment
        android:id="@+id/service_unavailable"
        android:name="com.example.myspacex.presentation.fragment.ServiceUnavailable"
        android:label="@string/service_unavailable"
        tools:layout="@layout/fragment_service_unavailable" />

    <fragment
        android:id="@+id/details_screen"
        android:name="com.example.myspacex.presentation.fragment.LaunchDetailsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_launch_details" />

    <action
        android:id="@+id/go_to_search_results"
        app:destination="@+id/search_results"
        app:popUpTo="@id/start"
        app:popUpToInclusive="false" />

</navigation>